--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css"
       rel="stylesheet"
     />
+    <!--Font-->
+    <link
+      href="//db.onlinewebfonts.com/c/f21923cb0f60b46d41a66875255790b3?family=NHaasGroteskDSPro-65Md"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>React App</title>
   </head>
   <body>
